4.3.2 - Fixed progressbar stil not centered on mobile (#2)

--- a/client/src/assets/loading.css
+++ b/client/src/assets/loading.css
@@ -49,8 +49,3 @@
        transform: rotate(1turn);
     }
  }
- @media only screen and (min-width: 300px) and (max-width: 1100px)  {
-    .progress {
-        left: 30vw;
-    }
- }
